syntax = "proto3";

package greet;

option go_package = "greetpb";

service GreetingService {
   rpc SayHello (GreetRequest) returns (GreetResponse) {};
}

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string message = 1;
}
